package com.prmto.home_presentation.util

object HomeTestTags {
    const val HOME_SCREEN = "home"
}