package com.prmto.auth_presentation.util

object AuthTestTags {
    const val LOGIN_SCREEN = "login"
}