<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="post">Post</string>
    <string name="story">Story</string>
    <string name="reels">Reels</string>
    <string name="change_camera">Change Camera</string>
    <string name="new_post">New Post</string>
    <string name="next">Next</string>
    <string name="select_multiple_images_or_videos">Select multiple images or videos</string>
    <string name="navigate_to_post_camera_screen">Navigate to Post Camera Screen</string>
    <string name="please_you_select_an_image">Please you select an image</string>
    <string name="select_album">Select album</string>
    <string name="albums">Albums</string>
    <string name="favorites">Favorites</string>
    <string name="videos">Videos</string>
    <string name="back">back</string>
    <string name="share">Share</string>
    <string name="profile_photo">Profile photo</string>
    <string name="post_image">Post Image</string>
    <string name="write_a_caption">Write a caption...</string>
    <string name="preview">Preview</string>
    <string name="post_shared_successfully">Post shared successfully</string>
</resources>