...
import androidx.compose.ui.unit.dp
import com.prmto.core_domain.usecase.AlbumAndCoverImage
import com.prmto.core_presentation.previews.UiModePreview
import com.prmto.core_presentation.ui.theme.InstagramCloneTheme
import com.prmto.share_presentation.R

val postGallerySheetContentTestTag = "postGallerySheetContent"

@Composable
fun PostGallerySheetContent(
    modifier: Modifier = Modifier,
    albumsAndCoverImage: List<AlbumAndCoverImage>,
    onClickedAlbumItem: (albumName: String) -> Unit
...
